tests/fail/snapshot_outlive_db.stderr
error[E0597]: `db` does not live long enough
 --> tests/fail/snapshot_outlive_db.rs:7:9
  |
5 |     let _snapshot = {
  |         --------- borrow later stored here
6 |         let db = DB::open_default("foo").unwrap();
  |             -- binding `db` declared here
7 |         db.snapshot()
  |         ^^^^^^^^^^^^^ borrowed value does not live long enough
8 |     };
  |     - `db` dropped here while still borrowed
